<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#F6F1F1"
        android:orientation="horizontal">


    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="350sp"
            android:src="@drawable/boys_girls"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.493"
            android:importantForAccessibility="no"/>
    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="40sp"
            android:fontFamily="@font/playfair_display_bold_italic"/>
    <TextView
            android:text="@string/the_world_of_infinite_knowledge_amp_unending_discovery_n_discover_learn_amp_transform_n_your_world_through_lifelong_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28sp" android:gravity="center"
            android:textSize="20sp" android:fontFamily="@font/playfair_display_bold_italic" app:lineHeight="30sp"/>
    <Button
            android:text="@string/create_an_account"
            android:layout_width="200sp"
            android:layout_height="wrap_content" android:id="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40sp" android:backgroundTint="#bf4945"
            app:cornerRadius="20sp" app:circularflow_defaultRadius="20sp" app:circularflow_radiusInDP="20sp"
            app:layout_constraintCircleRadius="20sp"/>
    <Button
            android:layout_width="200sp"
            android:layout_height="wrap_content" android:id="@+id/btnLogOut"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/login" android:backgroundTint="#F6F1F1"
            android:textColor="#bf4945" app:strokeColor="#bf4945" app:strokeWidth="1sp"
            android:layout_marginTop="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
